--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,10 +13,10 @@
   },
   "license": "MIT",
   "scripts": {
-    "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+    "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --config ./tailwind.config.js",
     "build:components": "tsc",
     "check-types": "tsc --noEmit",
-    "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+    "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --config ./tailwind.config.js --watch",
     "dev:components": "tsc --watch",
     "lint": "eslint src --max-warnings 0"
   },
