chore: Added Mutation testing support to ui package

--- a/.stryker-tmp/sandbox2646433/apps/next-tailwind-template/tsconfig.json
+++ b/.stryker-tmp/sandbox2646433/apps/next-tailwind-template/tsconfig.json
@@ -6,17 +6,11 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "@testing-library/jest-dom"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "tests/**/*.ts",
-    "tests/**/*.tsx",
+    "**/*.ts",
+    "**/*.tsx",
     "next-env.d.ts",
     "next.config.ts",
     ".next/types/**/*.ts"
