--- a/apps/next-tailwind-template/package.json
+++ b/apps/next-tailwind-template/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
     "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "mutation": "stryker run",
+    "mutation:report": "open reports/mutation/html/index.html"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
@@ -25,8 +27,12 @@
     "@next/eslint-plugin-next": "^15.3.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
+    "@repo/stryker-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@stryker-mutator/core": "^8.0.0",
+    "@stryker-mutator/jest-runner": "^8.7.1",
+    "@stryker-mutator/typescript-checker": "^8.0.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
