chore: cleanup unwanted files

--- a/packages/ui/.gitignore
+++ b/packages/ui/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/.stryker-tmp
+.stryker-tmp
+reports
 /node_modules
 /.pnp
 .pnp.js
