--- a/apps/next-tailwind-template/package.json
+++ b/apps/next-tailwind-template/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@repo/design-system": "workspace:*",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
