chore: Rename ui package to base-ui

--- a/apps/next-tailwind-template/package.json
+++ b/apps/next-tailwind-template/package.json
@@ -15,7 +15,7 @@
     "mutation:report": "open reports/mutation/html/index.html"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@repo/base-ui": "workspace:*",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
