--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -9,6 +9,14 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./types": {
+      "import": "./dist/types.js",
+      "require": "./dist/types.js"
+    },
     "./*": {
       "import": "./dist/*/index.js",
       "require": "./dist/*/index.js"
@@ -55,5 +63,8 @@
     "tailwindcss": "^4.1.5",
     "ts-jest": "^29.1.2",
     "typescript": "5.8.2"
+  },
+  "dependencies": {
+    "react-virtualized": "^9.22.6"
   }
 }
