feat: Update image handling in OutputPage and related components
- Refactor demoImages structure to include face and model properties with random images.
- Modify ImageButton to log payload changes using useEffect.
- Enhance MasonryImageGrid to use updated image properties and improve key handling.
- Introduce new OutputImage type to better structure image data.
- Clean up outputPage.event.handler by removing unused action handlers.
- Add rimraf as a dependency for cleaning build artifacts in package.json files.
- Implement clean script in base-ui and face-swap-ui packages for easier build management.

--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -24,6 +24,7 @@
   },
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf dist",
     "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --config ./tailwind.config.js",
     "build:components": "tsc",
     "build": "pnpm build:styles && pnpm build:components",
