--- a/packages/base-service-utils/package.json
+++ b/packages/base-service-utils/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "face-swap-bff",
+  "name": "@repo/base-service-utils",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
-  "type": "module",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs --coverage",
     "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "tsx watch src/main.ts",
-    "dev:watch": "tsx watch src/main.ts",
-    "debug": "node --inspect-brk dist/main.js"
+    "dev": "tsc --watch",
+    "debug": "node --inspect-brk dist/index.js"
   },
   "dependencies": {
-    "@repo/base-service-utils": "workspace:*",
     "@repo/jest-config": "workspace:*",
     "@repo/stryker-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@fastify/cors": "^11.0.1",
-    "@fastify/multipart": "^9.0.3",
     "exif": "^0.6.0",
     "exif-reader": "^2.0.2",
-    "fastify": "5.3.3",
     "fetch": "1.1.0",
     "node-fetch": "2.6.9",
     "sharp": "0.34.1"
