--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,11 @@
       "persistent": true,
       "dependsOn": ["^dev"]
     },
+    "face-swap-bff#dev": {
+      "dependsOn": ["^build"], // Only depend on build tasks of dependencies
+      "cache": false,
+      "persistent": true
+    },
     "test": {
       "dependsOn": ["^build"],
       "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
