feat(shared-interfaces): add Tailwind CSS and TypeScript configurations
- Created tailwind.config.js for Tailwind CSS setup with CSS modules support.
- Added tsconfig.json for TypeScript configuration, extending from the base config.
- Introduced turbo.json for task management with build and dev tasks for shared interfaces.
- Updated pnpm-lock.yaml to include shared-interfaces package and its dependencies.
- Modified face-swap-bff package.json to depend on shared-interfaces instead of base-service-utils.
- Cleaned up main.ts in face-swap-bff by removing unused import from base-service-utils.
- Adjusted turbo.json to remove unnecessary build dependencies for face-swap-bff dev task.

--- a/apps/face-swap-app/package.json
+++ b/apps/face-swap-app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@repo/shared-interfaces": "workspace:*",
     "@repo/face-swap-ui": "workspace:*",
     "@repo/design-system": "workspace:*",
     "@babel/preset-env": "^7.27.2",
