--- a/packages/service-utils/tsconfig.json
+++ b/packages/service-utils/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@repo/typescript-config/node.json",
   "compilerOptions": {
     "outDir": "dist",
-    "sourceMap": true
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["dist", "build", "node_modules"]
 }
