feat: add service-utils package with StringUtil and interfaces
- Created StringUtil utility with a simple string function.
- Added index file to export utilities from service-utils.
- Defined various interfaces for file metadata, image sidecars, and scanned files.
- Updated plopfile to include Fastify BFF service generation with port configuration.
- Added dependencies for Fastify in service-utils.
- Removed obsolete face-swap-bff service files and tests.
- Created new test-bff service with basic structure and test route.
- Added Jest configuration and package.json for the new test-bff service.
- Updated templates for node-fastify-bff-service to include new configurations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,23 @@
 {
+  "material-icon-theme.folders.associations": {
+    "base-ui": "react-components",
+    "components": "react-components",
+    "design-system": "sandbox",
+    "eslint-config": "Circleci",
+    "jest-config": "Circleci",
+    "tailwind-config": "Circleci",
+    "typescript-config": "Circleci",
+    "stryker-config": "Circleci",
+    "shared-interfaces": "include",
+    "service-utils": "node",
+    "tools": "tools",
+    "templates": "template",
+    "face-swap-ui": "ui",
+    "node_modules": "less",
+    "face-swap-app": "store",
+    "next-tailwind-template": "store",
+    "test-bff": "server"
+  },
   "eslint.workingDirectories": [
     {
       "mode": "auto"
