--- a/packages/service-utils/package.json
+++ b/packages/service-utils/package.json
@@ -37,5 +37,10 @@
     "react": "^19.1.0",
     "ts-jest": "^29.1.2",
     "typescript": "5.8.2"
+  },
+  "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "fastify": "5.3.3"
   }
 }
