Refactor service-utils and shared-interfaces
- Removed StringUtil import from service-utils index.
- Updated shared-interfaces package.json to remove unused test scripts.
- Deleted index.test.ts file from shared-interfaces.
- Cleaned up pnpm-lock.yaml by removing unused dependencies and updating jest-related packages.
- Modified face-swap-bff package.json to update jest config and dependencies.
- Added new tests for routes in face-swap-bff.
- Removed old jest.config.mjs and package.json files from test-bff service.
- Deleted main.ts, routes.ts, and tsconfig.json files from test-bff service.

--- a/packages/shared-interfaces/package.json
+++ b/packages/shared-interfaces/package.json
@@ -15,11 +15,7 @@
     "build": "pnpm build:lib",
     "check-types": "tsc --noEmit",
     "dev:lib": "tsc --watch",
-    "lint": "eslint src --max-warnings 0",
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch",
-    "mutation": "stryker run",
-    "mutation:report": "open reports/mutation/html/index.html"
+    "lint": "eslint src --max-warnings 0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
