--- a/services/face-swap-bff/package.json
+++ b/services/face-swap-bff/package.json
@@ -5,22 +5,22 @@
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs --coverage",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.cjs --detectOpenHandles",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.cjs --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.cjs --coverage",
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "tsx watch src/main.ts",
     "debug": "node --inspect-brk dist/main.js"
   },
   "dependencies": {
-    "@repo/shared-interfaces": "workspace:*",
-    "@repo/service-utils": "workspace:*",
-    "@repo/jest-config": "workspace:*",
-    "@repo/stryker-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
+    "@repo/jest-config": "workspace:*",
+    "@repo/service-utils": "workspace:*",
+    "@repo/shared-interfaces": "workspace:*",
+    "@repo/stryker-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "exif": "^0.6.0",
     "exif-reader": "^2.0.2",
     "fastify": "5.3.3",
@@ -29,6 +29,7 @@
     "sharp": "0.34.1"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.17.30",
     "jest": "^29.7.0",
