feat: add FullscreenImageViewer and ImageGridWithFullScreen components; update styles and integrate with existing UI components

--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19"
   },
   "devDependencies": {
+    "@repo/shared-interfaces": "workspace:*",
     "@repo/design-system": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
