feat: Implement ImportFaceModelPage with file upload and image display functionality
- Added FileUploadSection component for handling file uploads.
- Introduced ImageDisplaySection component to show uploaded images.
- Created radio button group for selecting import type (face/model).
- Developed action buttons for accepting and uploading files.
- Implemented event handler for managing import actions.
- Added CSS styles for the new components using BEM methodology.
- Created utility functions for handling file uploads and generating FormData.
- Updated routes in the BFF server to handle draft image uploads and acceptance.
- Added tests for ImportFaceModelPage to ensure correct functionality.
- Integrated new components into the face-swap-ui package and updated index files.

--- a/packages/service-utils/package.json
+++ b/packages/service-utils/package.json
@@ -22,9 +22,9 @@
     "mutation:report": "open reports/mutation/html/index.html"
   },
   "devDependencies": {
-    "@repo/shared-interfaces": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
+    "@repo/shared-interfaces": "workspace:*",
     "@repo/stryker-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
@@ -42,6 +42,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/multipart": "^9.0.3",
-    "fastify": "5.3.3"
+    "fastify": "5.3.3",
+    "sharp": "0.34.1"
   }
 }
